deploy: a5e1495aab76ff5bc45455e34eefc4606b218f73

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@ No backlinks found
 </div>
 <footer>
 <div class=go-back>
-<a href=https://deemonsecurity.com><img src=img/avatar.png alt="Go Back to Deemonsecurity.com"></a>
+<a href=https://deemonsecurity.com><img src=https://deemonsecurity.comimg/avatar.png alt="Go Back to Deemonsecurity.com"></a>
 <div>
 <div id=footer>
 <div class=container>
