--- a/notes/hosting/index.html
+++ b/notes/hosting/index.html
@@ -218,7 +218,7 @@ git push origin hugo
 </div>
 <footer>
 <div class=go-back>
-<a href=https://deemonsecurity.com><img src=img/avatar.png alt="Go Back to Deemonsecurity.com"></a>
+<a href=https://deemonsecurity.com><img src=https://deemonsecurity.comimg/avatar.png alt="Go Back to Deemonsecurity.com"></a>
 <div>
 <div id=footer>
 <div class=container>
