--- a/notes/obsidian/index.html
+++ b/notes/obsidian/index.html
@@ -124,7 +124,7 @@ and create a new Vault in the <code>/content</code> folder that you created and 
 </div>
 <footer>
 <div class=go-back>
-<a href=https://deemonsecurity.com><img src=img/avatar.png alt="Go Back to Deemonsecurity.com"></a>
+<a href=https://deemonsecurity.com><img src=https://deemonsecurity.comimg/avatar.png alt="Go Back to Deemonsecurity.com"></a>
 <div>
 <div id=footer>
 <div class=container>
