--- a/notes/philosophy/index.html
+++ b/notes/philosophy/index.html
@@ -122,7 +122,7 @@ and
 </div>
 <footer>
 <div class=go-back>
-<a href=https://deemonsecurity.com><img src=img/avatar.png alt="Go Back to Deemonsecurity.com"></a>
+<a href=https://deemonsecurity.com><img src=https://deemonsecurity.comimg/avatar.png alt="Go Back to Deemonsecurity.com"></a>
 <div>
 <div id=footer>
 <div class=container>
