--- a/notes/preview-changes/index.html
+++ b/notes/preview-changes/index.html
@@ -150,7 +150,7 @@ $ hugo server
 </div>
 <footer>
 <div class=go-back>
-<a href=https://deemonsecurity.com><img src=img/avatar.png alt="Go Back to Deemonsecurity.com"></a>
+<a href=https://deemonsecurity.com><img src=https://deemonsecurity.comimg/avatar.png alt="Go Back to Deemonsecurity.com"></a>
 <div>
 <div id=footer>
 <div class=container>
